[project]
name = "competitive-python"
version = "0.1.0"
description = "Add a short description here"
authors = [
    { name = "fjnkt98", email = "fjnkt98@gmail.com" }
]
dependencies = [
    "numpy>=1.24.3",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "black>=23.3.0",
    "flake8>=5.0.4",
    "pyflakes>=3.0.1",
    "mypy>=1.4.1",
]

[tool.hatch.metadata]
allow-direct-references = true
