[project]
dependencies = [
  "bitarray==2.6.2",
  "cppyy==2.4.1",
  "more-itertools==9.0.0",
  "mpmath==1.2.1",
  "networkx==3.0",
  "numba==0.57.0",
  "numpy==1.24.1",
  "ortools==9.5.2237",
  "pandas==1.5.2",
  "polars==0.15.15",
  "pulp==2.7.0",
  "scikit-learn==1.2.0",
  "scipy==1.10.1",
  "setuptools==66.0.0",
  "shapely==2.0.0",
  "sortedcontainers==2.4.0",
  "sympy==1.11.1",
  "z3-solver==4.12.1.0",
]
description = "Add your description here"
name = "competitive-python"
readme = "README.md"
requires-python = ">=3.11"
version = "0.1.0"

[dependency-groups]
dev = [
  "mypy>=1.13.0",
  "ruff>=0.8.3",
]

[tool.mypy]
strict = true

[tool.ruff]
indent-width = 4
line-length = 200

[tool.ruff.lint]
extend-ignore = ["E741"]
